--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-simple-typewriter": "^5.0.1",
     "react-swiper": "^0.1.5",
     "react-tilt": "^1.0.2",
+    "react-toastify": "^11.0.5",
     "swiper": "^11.2.10"
   },
   "devDependencies": {
