Set up auto blog fetch from Dev.to using GitHub Actions

--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,6 @@
 {
   "rewrites": [
+    { "source": "/blogs.json", "destination": "/blogs.json" },
     { "source": "/(.*)", "destination": "/index.html" }
   ]
 }
